--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
@@ -17,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-player": "^2.10.0",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.30.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24"
   },
